// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`identify-with-password Client-side field change validation tests fails client side validation with no inputs 1`] = `
<div>
  <div
    class="MuiScopedCssBaseline-root emotion-0"
  >
    <main
      class="auth-container main-container mainViewContainer MuiBox-root emotion-1"
      data-commit="b9bbc0140703c3fbf0e2e58920362e70"
      data-version="0.0.0"
      id="okta-sign-in"
      lang="en"
    >
      <div
        class="siwContainer MuiBox-root emotion-2"
      >
        <div
          class="okta-sign-in-header auth-header siwHeader MuiBox-root emotion-3"
        >
          <h1
            class="MuiTypography-root MuiTypography-h1 emotion-4"
          />
        </div>
        <div
          class="MuiBox-root emotion-5"
        >
          <form
            class="o-form"
            data-se="o-form"
            novalidate=""
            style="max-width: 100%; word-break: break-word;"
          >
            <div
              class="MuiBox-root emotion-6"
            >
              <div
                class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiAlert-root MuiAlert-infoboxError MuiAlert-infobox emotion-7"
                role="alert"
              >
                <div
                  class="MuiAlert-icon emotion-8"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit emotion-9"
                    data-testid="ErrorOutlineIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M11 15h2v2h-2zm0-8h2v6h-2zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                    />
                  </svg>
                </div>
                <div
                  class="MuiAlert-message emotion-10"
                >
                  We found some errors. Please review the form and make corrections.
                </div>
              </div>
            </div>
            <div
              class="MuiBox-root emotion-11"
            >
              <div
                class="MuiBox-root emotion-12"
              >
                <div
                  class="MuiBox-root emotion-13"
                >
                  <h2
                    class="MuiTypography-root MuiTypography-h4 emotion-14"
                    data-se="o-form-head"
                    id="identify_Title_Sign_In_aut1egri5t7iomJ3l1d7_1"
                  >
                    Sign In
                  </h2>
                </div>
              </div>
              <div
                class="MuiBox-root emotion-12"
              >
                <div
                  class="MuiBox-root emotion-16"
                >
                  <label
                    class="MuiInputLabel-root MuiFormLabel-root MuiFormLabel-colorPrimary emotion-17"
                    for="identifier"
                  >
                    Username
                  </label>
                  <div
                    class="MuiInputBase-root MuiInputBase-colorPrimary Mui-error MuiInputBase-fullWidth Mui-focused emotion-18"
                  >
                    <input
                      aria-describedby=" identifier-error identify_Title_Sign_In_aut1egri5t7iomJ3l1d7_1 "
                      aria-invalid="true"
                      autocomplete="username"
                      class="MuiInputBase-input emotion-19"
                      data-se="identifier"
                      id="identifier"
                      name="identifier"
                      type="text"
                    />
                  </div>
                  <div
                    class="MuiBox-root emotion-16"
                  >
                    <p
                      class="MuiFormHelperText-root Mui-error emotion-21"
                      data-se="identifier-error"
                      id="identifier-error"
                      role="alert"
                    >
                      This field cannot be left blank
                    </p>
                  </div>
                </div>
              </div>
              <div
                class="MuiBox-root emotion-12"
              >
                <div
                  class="MuiBox-root emotion-16"
                >
                  <label
                    class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-animated MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-animated emotion-24"
                    for="credentials.passcode"
                  >
                    Password
                  </label>
                  <div
                    class="MuiInputBase-root MuiInputBase-colorPrimary Mui-error MuiInputBase-fullWidth MuiInputBase-adornedEnd emotion-18"
                  >
                    <input
                      aria-describedby=" credentials.passcode-error identify_Title_Sign_In_aut1egri5t7iomJ3l1d7_1 "
                      aria-invalid="true"
                      autocomplete="current-password"
                      class="MuiInputBase-input MuiInputBase-inputAdornedEnd emotion-19"
                      data-se="credentials.passcode"
                      id="credentials.passcode"
                      name="credentials.passcode"
                      type="password"
                    />
                    <div
                      class="MuiInputAdornment-root MuiInputAdornment-positionEnd emotion-27"
                    >
                      <button
                        aria-controls="credentials.passcode"
                        aria-label="Show password"
                        aria-pressed="false"
                        class="MuiButtonBase-root MuiIconButton-root MuiIconButton-edgeEnd MuiIconButton-sizeMedium emotion-28"
                        data-mui-internal-clone-element="true"
                        tabindex="0"
                        type="button"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-29"
                          fill="none"
                          focusable="false"
                          viewBox="0 0 16 16"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            clip-rule="evenodd"
                            d="M3.89765 11.5506C2.89626 10.6994 2.04176 9.50056 1.15617 8C2.04176 6.49944 2.89626 5.30062 3.89765 4.44944C4.96916 3.53865 6.24031 3 8 3C9.75969 3 11.0308 3.53865 12.1024 4.44944C13.1037 5.30062 13.9582 6.49944 14.8438 8C13.9582 9.50056 13.1037 10.6994 12.1024 11.5506C11.0308 12.4613 9.75969 13 8 13C6.24031 13 4.96916 12.4613 3.89765 11.5506ZM8 14C12 14 14 11.5 16 8C14 4.5 12 2 8 2C4 2 2 4.5 0 8C2 11.5 4 14 8 14ZM11 8C11 9.65685 9.65685 11 8 11C6.34315 11 5 9.65685 5 8C5 6.34315 6.34315 5 8 5C9.65685 5 11 6.34315 11 8ZM12 8C12 10.2091 10.2091 12 8 12C5.79086 12 4 10.2091 4 8C4 5.79086 5.79086 4 8 4C10.2091 4 12 5.79086 12 8Z"
                            fill="currentColor"
                            fill-rule="evenodd"
                          />
                        </svg>
                        <span
                          class="MuiTouchRipple-root emotion-30"
                        />
                      </button>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-16"
                  >
                    <p
                      class="MuiFormHelperText-root Mui-error emotion-21"
                      data-se="credentials.passcode-error"
                      id="credentials.passcode-error"
                      role="alert"
                    >
                      This field cannot be left blank
                    </p>
                  </div>
                </div>
              </div>
              <div
                class="MuiBox-root emotion-12"
              >
                <fieldset
                  aria-describedby="identify_Title_Sign_In_aut1egri5t7iomJ3l1d7_1"
                  class="MuiFormControl-root MuiFormControl-marginNormal emotion-34"
                >
                  <label
                    class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd emotion-35"
                  >
                    <span
                      class="MuiCheckbox-root MuiCheckbox-colorPrimary MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary PrivateSwitchBase-root emotion-36"
                    >
                      <input
                        class="PrivateSwitchBase-input emotion-37"
                        data-se="rememberMe"
                        data-se-for-name="rememberMe"
                        id="rememberMe"
                        name="rememberMe"
                        type="checkbox"
                      />
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-29"
                        data-testid="CheckBoxOutlineBlankIcon"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                        />
                      </svg>
                    </span>
                    <span
                      class="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label emotion-39"
                    >
                      Keep me signed in
                    </span>
                  </label>
                </fieldset>
              </div>
              <div
                class="MuiBox-root emotion-12"
              >
                <button
                  aria-describedby="identify_Title_Sign_In_aut1egri5t7iomJ3l1d7_1"
                  class="MuiButtonBase-root MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-fullWidth MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-fullWidth emotion-41"
                  data-type="save"
                  tabindex="0"
                  type="submit"
                >
                  Sign in
                  <span
                    class="MuiTouchRipple-root emotion-30"
                  />
                </button>
              </div>
              <div
                class="MuiBox-root emotion-12"
              >
                <a
                  class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways emotion-44"
                  data-se="forgot-password"
                  href="javascript:void(0)"
                >
                  Forgot password?
                </a>
              </div>
              <div
                class="MuiBox-root emotion-12"
              >
                <hr
                  class="MuiDivider-root MuiDivider-fullWidth separation-line emotion-46"
                />
              </div>
              <div
                class="MuiBox-root emotion-47"
              >
                <div
                  class="MuiBox-root emotion-12"
                >
                  <div
                    class="MuiBox-root emotion-13"
                  >
                    <p
                      class="MuiTypography-root MuiTypography-body1 MuiTypography-paragraph emotion-50"
                      data-se="signup-info"
                      id="identify_Description_Dont_have_an_account_aut1egri5t7iomJ3l1d7_9"
                    >
                      Don't have an account?
                    </p>
                  </div>
                </div>
                <div
                  class="MuiBox-root emotion-12"
                >
                  <a
                    class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways emotion-44"
                    data-se="enroll"
                    href="javascript:void(0)"
                  >
                    Sign up
                  </a>
                </div>
              </div>
            </div>
          </form>
        </div>
      </div>
    </main>
  </div>
</div>
`;

exports[`identify-with-password Client-side field change validation tests should attempt to submit page with all required fields empty 1`] = `
<div>
  <div
    class="MuiScopedCssBaseline-root emotion-0"
  >
    <main
      class="auth-container main-container mainViewContainer MuiBox-root emotion-1"
      data-commit="b9bbc0140703c3fbf0e2e58920362e70"
      data-version="0.0.0"
      id="okta-sign-in"
      lang="en"
    >
      <div
        class="siwContainer MuiBox-root emotion-2"
      >
        <div
          class="okta-sign-in-header auth-header siwHeader MuiBox-root emotion-3"
        >
          <h1
            class="MuiTypography-root MuiTypography-h1 emotion-4"
          />
        </div>
        <div
          class="MuiBox-root emotion-5"
        >
          <form
            class="o-form"
            data-se="o-form"
            novalidate=""
            style="max-width: 100%; word-break: break-word;"
          >
            <div
              class="MuiBox-root emotion-6"
            >
              <div
                class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiAlert-root MuiAlert-infoboxError MuiAlert-infobox emotion-7"
                role="alert"
              >
                <div
                  class="MuiAlert-icon emotion-8"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit emotion-9"
                    data-testid="ErrorOutlineIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M11 15h2v2h-2zm0-8h2v6h-2zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                    />
                  </svg>
                </div>
                <div
                  class="MuiAlert-message emotion-10"
                >
                  We found some errors. Please review the form and make corrections.
                </div>
              </div>
            </div>
            <div
              class="MuiBox-root emotion-11"
            >
              <div
                class="MuiBox-root emotion-12"
              >
                <div
                  class="MuiBox-root emotion-13"
                >
                  <h2
                    class="MuiTypography-root MuiTypography-h4 emotion-14"
                    data-se="o-form-head"
                    id="identify_Title_Sign_In_aut1egri5t7iomJ3l1d7_1"
                  >
                    Sign In
                  </h2>
                </div>
              </div>
              <div
                class="MuiBox-root emotion-12"
              >
                <div
                  class="MuiBox-root emotion-16"
                >
                  <label
                    class="MuiInputLabel-root MuiFormLabel-root MuiFormLabel-colorPrimary emotion-17"
                    for="identifier"
                  >
                    Username
                  </label>
                  <div
                    class="MuiInputBase-root MuiInputBase-colorPrimary Mui-error MuiInputBase-fullWidth Mui-focused emotion-18"
                  >
                    <input
                      aria-describedby=" identifier-error identify_Title_Sign_In_aut1egri5t7iomJ3l1d7_1 "
                      aria-invalid="true"
                      autocomplete="username"
                      class="MuiInputBase-input emotion-19"
                      data-se="identifier"
                      id="identifier"
                      name="identifier"
                      type="text"
                    />
                  </div>
                  <div
                    class="MuiBox-root emotion-16"
                  >
                    <p
                      class="MuiFormHelperText-root Mui-error emotion-21"
                      data-se="identifier-error"
                      id="identifier-error"
                      role="alert"
                    >
                      This field cannot be left blank
                    </p>
                  </div>
                </div>
              </div>
              <div
                class="MuiBox-root emotion-12"
              >
                <div
                  class="MuiBox-root emotion-16"
                >
                  <label
                    class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-animated MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-animated emotion-24"
                    for="credentials.passcode"
                  >
                    Password
                  </label>
                  <div
                    class="MuiInputBase-root MuiInputBase-colorPrimary Mui-error MuiInputBase-fullWidth MuiInputBase-adornedEnd emotion-18"
                  >
                    <input
                      aria-describedby=" credentials.passcode-error identify_Title_Sign_In_aut1egri5t7iomJ3l1d7_1 "
                      aria-invalid="true"
                      autocomplete="current-password"
                      class="MuiInputBase-input MuiInputBase-inputAdornedEnd emotion-19"
                      data-se="credentials.passcode"
                      id="credentials.passcode"
                      name="credentials.passcode"
                      type="password"
                    />
                    <div
                      class="MuiInputAdornment-root MuiInputAdornment-positionEnd emotion-27"
                    >
                      <button
                        aria-controls="credentials.passcode"
                        aria-label="Show password"
                        aria-pressed="false"
                        class="MuiButtonBase-root MuiIconButton-root MuiIconButton-edgeEnd MuiIconButton-sizeMedium emotion-28"
                        data-mui-internal-clone-element="true"
                        tabindex="0"
                        type="button"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-29"
                          fill="none"
                          focusable="false"
                          viewBox="0 0 16 16"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            clip-rule="evenodd"
                            d="M3.89765 11.5506C2.89626 10.6994 2.04176 9.50056 1.15617 8C2.04176 6.49944 2.89626 5.30062 3.89765 4.44944C4.96916 3.53865 6.24031 3 8 3C9.75969 3 11.0308 3.53865 12.1024 4.44944C13.1037 5.30062 13.9582 6.49944 14.8438 8C13.9582 9.50056 13.1037 10.6994 12.1024 11.5506C11.0308 12.4613 9.75969 13 8 13C6.24031 13 4.96916 12.4613 3.89765 11.5506ZM8 14C12 14 14 11.5 16 8C14 4.5 12 2 8 2C4 2 2 4.5 0 8C2 11.5 4 14 8 14ZM11 8C11 9.65685 9.65685 11 8 11C6.34315 11 5 9.65685 5 8C5 6.34315 6.34315 5 8 5C9.65685 5 11 6.34315 11 8ZM12 8C12 10.2091 10.2091 12 8 12C5.79086 12 4 10.2091 4 8C4 5.79086 5.79086 4 8 4C10.2091 4 12 5.79086 12 8Z"
                            fill="currentColor"
                            fill-rule="evenodd"
                          />
                        </svg>
                        <span
                          class="MuiTouchRipple-root emotion-30"
                        />
                      </button>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-16"
                  >
                    <p
                      class="MuiFormHelperText-root Mui-error emotion-21"
                      data-se="credentials.passcode-error"
                      id="credentials.passcode-error"
                      role="alert"
                    >
                      This field cannot be left blank
                    </p>
                  </div>
                </div>
              </div>
              <div
                class="MuiBox-root emotion-12"
              >
                <fieldset
                  aria-describedby="identify_Title_Sign_In_aut1egri5t7iomJ3l1d7_1"
                  class="MuiFormControl-root MuiFormControl-marginNormal emotion-34"
                >
                  <label
                    class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd emotion-35"
                  >
                    <span
                      class="MuiCheckbox-root MuiCheckbox-colorPrimary MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary PrivateSwitchBase-root emotion-36"
                    >
                      <input
                        class="PrivateSwitchBase-input emotion-37"
                        data-se="rememberMe"
                        data-se-for-name="rememberMe"
                        id="rememberMe"
                        name="rememberMe"
                        type="checkbox"
                      />
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-29"
                        data-testid="CheckBoxOutlineBlankIcon"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                        />
                      </svg>
                    </span>
                    <span
                      class="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label emotion-39"
                    >
                      Keep me signed in
                    </span>
                  </label>
                </fieldset>
              </div>
              <div
                class="MuiBox-root emotion-12"
              >
                <button
                  aria-describedby="identify_Title_Sign_In_aut1egri5t7iomJ3l1d7_1"
                  class="MuiButtonBase-root MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-fullWidth MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-fullWidth emotion-41"
                  data-type="save"
                  tabindex="0"
                  type="submit"
                >
                  Sign in
                  <span
                    class="MuiTouchRipple-root emotion-30"
                  />
                </button>
              </div>
              <div
                class="MuiBox-root emotion-12"
              >
                <a
                  class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways emotion-44"
                  data-se="forgot-password"
                  href="javascript:void(0)"
                >
                  Forgot password?
                </a>
              </div>
              <div
                class="MuiBox-root emotion-12"
              >
                <hr
                  class="MuiDivider-root MuiDivider-fullWidth separation-line emotion-46"
                />
              </div>
              <div
                class="MuiBox-root emotion-47"
              >
                <div
                  class="MuiBox-root emotion-12"
                >
                  <div
                    class="MuiBox-root emotion-13"
                  >
                    <p
                      class="MuiTypography-root MuiTypography-body1 MuiTypography-paragraph emotion-50"
                      data-se="signup-info"
                      id="identify_Description_Dont_have_an_account_aut1egri5t7iomJ3l1d7_9"
                    >
                      Don't have an account?
                    </p>
                  </div>
                </div>
                <div
                  class="MuiBox-root emotion-12"
                >
                  <a
                    class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways emotion-44"
                    data-se="enroll"
                    href="javascript:void(0)"
                  >
                    Sign up
                  </a>
                </div>
              </div>
            </div>
          </form>
        </div>
      </div>
    </main>
  </div>
</div>
`;

exports[`identify-with-password Client-side field change validation tests should attempt to submit page with all required fields empty and type in one of the required fields to remove error 1`] = `
<div>
  <div
    class="MuiScopedCssBaseline-root emotion-0"
  >
    <main
      class="auth-container main-container mainViewContainer MuiBox-root emotion-1"
      data-commit="b9bbc0140703c3fbf0e2e58920362e70"
      data-version="0.0.0"
      id="okta-sign-in"
      lang="en"
    >
      <div
        class="siwContainer MuiBox-root emotion-2"
      >
        <div
          class="okta-sign-in-header auth-header siwHeader MuiBox-root emotion-3"
        >
          <h1
            class="MuiTypography-root MuiTypography-h1 emotion-4"
          />
        </div>
        <div
          class="MuiBox-root emotion-5"
        >
          <form
            class="o-form"
            data-se="o-form"
            novalidate=""
            style="max-width: 100%; word-break: break-word;"
          >
            <div
              class="MuiBox-root emotion-6"
            >
              <div
                class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiAlert-root MuiAlert-infoboxError MuiAlert-infobox emotion-7"
                role="alert"
              >
                <div
                  class="MuiAlert-icon emotion-8"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit emotion-9"
                    data-testid="ErrorOutlineIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M11 15h2v2h-2zm0-8h2v6h-2zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                    />
                  </svg>
                </div>
                <div
                  class="MuiAlert-message emotion-10"
                >
                  We found some errors. Please review the form and make corrections.
                </div>
              </div>
            </div>
            <div
              class="MuiBox-root emotion-11"
            >
              <div
                class="MuiBox-root emotion-12"
              >
                <div
                  class="MuiBox-root emotion-13"
                >
                  <h2
                    class="MuiTypography-root MuiTypography-h4 emotion-14"
                    data-se="o-form-head"
                    id="identify_Title_Sign_In_aut1egri5t7iomJ3l1d7_1"
                  >
                    Sign In
                  </h2>
                </div>
              </div>
              <div
                class="MuiBox-root emotion-12"
              >
                <div
                  class="MuiBox-root emotion-16"
                >
                  <label
                    class="MuiInputLabel-root MuiFormLabel-root MuiFormLabel-colorPrimary emotion-17"
                    for="identifier"
                  >
                    Username
                  </label>
                  <div
                    class="MuiInputBase-root MuiInputBase-colorPrimary Mui-error MuiInputBase-fullWidth Mui-focused emotion-18"
                  >
                    <input
                      aria-describedby=" identifier-error identify_Title_Sign_In_aut1egri5t7iomJ3l1d7_1 "
                      aria-invalid="true"
                      autocomplete="username"
                      class="MuiInputBase-input emotion-19"
                      data-se="identifier"
                      id="identifier"
                      name="identifier"
                      type="text"
                    />
                  </div>
                  <div
                    class="MuiBox-root emotion-16"
                  >
                    <p
                      class="MuiFormHelperText-root Mui-error emotion-21"
                      data-se="identifier-error"
                      id="identifier-error"
                      role="alert"
                    >
                      This field cannot be left blank
                    </p>
                  </div>
                </div>
              </div>
              <div
                class="MuiBox-root emotion-12"
              >
                <div
                  class="MuiBox-root emotion-16"
                >
                  <label
                    class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-animated MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-animated emotion-24"
                    for="credentials.passcode"
                  >
                    Password
                  </label>
                  <div
                    class="MuiInputBase-root MuiInputBase-colorPrimary Mui-error MuiInputBase-fullWidth MuiInputBase-adornedEnd emotion-18"
                  >
                    <input
                      aria-describedby=" credentials.passcode-error identify_Title_Sign_In_aut1egri5t7iomJ3l1d7_1 "
                      aria-invalid="true"
                      autocomplete="current-password"
                      class="MuiInputBase-input MuiInputBase-inputAdornedEnd emotion-19"
                      data-se="credentials.passcode"
                      id="credentials.passcode"
                      name="credentials.passcode"
                      type="password"
                    />
                    <div
                      class="MuiInputAdornment-root MuiInputAdornment-positionEnd emotion-27"
                    >
                      <button
                        aria-controls="credentials.passcode"
                        aria-label="Show password"
                        aria-pressed="false"
                        class="MuiButtonBase-root MuiIconButton-root MuiIconButton-edgeEnd MuiIconButton-sizeMedium emotion-28"
                        data-mui-internal-clone-element="true"
                        tabindex="0"
                        type="button"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-29"
                          fill="none"
                          focusable="false"
                          viewBox="0 0 16 16"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            clip-rule="evenodd"
                            d="M3.89765 11.5506C2.89626 10.6994 2.04176 9.50056 1.15617 8C2.04176 6.49944 2.89626 5.30062 3.89765 4.44944C4.96916 3.53865 6.24031 3 8 3C9.75969 3 11.0308 3.53865 12.1024 4.44944C13.1037 5.30062 13.9582 6.49944 14.8438 8C13.9582 9.50056 13.1037 10.6994 12.1024 11.5506C11.0308 12.4613 9.75969 13 8 13C6.24031 13 4.96916 12.4613 3.89765 11.5506ZM8 14C12 14 14 11.5 16 8C14 4.5 12 2 8 2C4 2 2 4.5 0 8C2 11.5 4 14 8 14ZM11 8C11 9.65685 9.65685 11 8 11C6.34315 11 5 9.65685 5 8C5 6.34315 6.34315 5 8 5C9.65685 5 11 6.34315 11 8ZM12 8C12 10.2091 10.2091 12 8 12C5.79086 12 4 10.2091 4 8C4 5.79086 5.79086 4 8 4C10.2091 4 12 5.79086 12 8Z"
                            fill="currentColor"
                            fill-rule="evenodd"
                          />
                        </svg>
                        <span
                          class="MuiTouchRipple-root emotion-30"
                        />
                      </button>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-16"
                  >
                    <p
                      class="MuiFormHelperText-root Mui-error emotion-21"
                      data-se="credentials.passcode-error"
                      id="credentials.passcode-error"
                      role="alert"
                    >
                      This field cannot be left blank
                    </p>
                  </div>
                </div>
              </div>
              <div
                class="MuiBox-root emotion-12"
              >
                <fieldset
                  aria-describedby="identify_Title_Sign_In_aut1egri5t7iomJ3l1d7_1"
                  class="MuiFormControl-root MuiFormControl-marginNormal emotion-34"
                >
                  <label
                    class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd emotion-35"
                  >
                    <span
                      class="MuiCheckbox-root MuiCheckbox-colorPrimary MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary PrivateSwitchBase-root emotion-36"
                    >
                      <input
                        class="PrivateSwitchBase-input emotion-37"
                        data-se="rememberMe"
                        data-se-for-name="rememberMe"
                        id="rememberMe"
                        name="rememberMe"
                        type="checkbox"
                      />
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-29"
                        data-testid="CheckBoxOutlineBlankIcon"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                        />
                      </svg>
                    </span>
                    <span
                      class="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label emotion-39"
                    >
                      Keep me signed in
                    </span>
                  </label>
                </fieldset>
              </div>
              <div
                class="MuiBox-root emotion-12"
              >
                <button
                  aria-describedby="identify_Title_Sign_In_aut1egri5t7iomJ3l1d7_1"
                  class="MuiButtonBase-root MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-fullWidth MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-fullWidth emotion-41"
                  data-type="save"
                  tabindex="0"
                  type="submit"
                >
                  Sign in
                  <span
                    class="MuiTouchRipple-root emotion-30"
                  />
                </button>
              </div>
              <div
                class="MuiBox-root emotion-12"
              >
                <a
                  class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways emotion-44"
                  data-se="forgot-password"
                  href="javascript:void(0)"
                >
                  Forgot password?
                </a>
              </div>
              <div
                class="MuiBox-root emotion-12"
              >
                <hr
                  class="MuiDivider-root MuiDivider-fullWidth separation-line emotion-46"
                />
              </div>
              <div
                class="MuiBox-root emotion-47"
              >
                <div
                  class="MuiBox-root emotion-12"
                >
                  <div
                    class="MuiBox-root emotion-13"
                  >
                    <p
                      class="MuiTypography-root MuiTypography-body1 MuiTypography-paragraph emotion-50"
                      data-se="signup-info"
                      id="identify_Description_Dont_have_an_account_aut1egri5t7iomJ3l1d7_9"
                    >
                      Don't have an account?
                    </p>
                  </div>
                </div>
                <div
                  class="MuiBox-root emotion-12"
                >
                  <a
                    class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways emotion-44"
                    data-se="enroll"
                    href="javascript:void(0)"
                  >
                    Sign up
                  </a>
                </div>
              </div>
            </div>
          </form>
        </div>
      </div>
    </main>
  </div>
</div>
`;

exports[`identify-with-password renders form 1`] = `
<div>
  <div
    class="MuiScopedCssBaseline-root emotion-0"
  >
    <main
      class="auth-container main-container mainViewContainer MuiBox-root emotion-1"
      data-commit="b9bbc0140703c3fbf0e2e58920362e70"
      data-version="0.0.0"
      id="okta-sign-in"
      lang="en"
    >
      <div
        class="siwContainer MuiBox-root emotion-2"
      >
        <div
          class="okta-sign-in-header auth-header siwHeader MuiBox-root emotion-3"
        >
          <h1
            class="MuiTypography-root MuiTypography-h1 emotion-4"
          />
        </div>
        <div
          class="MuiBox-root emotion-5"
        >
          <form
            class="o-form"
            data-se="o-form"
            novalidate=""
            style="max-width: 100%; word-break: break-word;"
          >
            <div
              class="MuiBox-root emotion-6"
            >
              <div
                class="MuiBox-root emotion-7"
              >
                <div
                  class="MuiBox-root emotion-8"
                >
                  <h2
                    class="MuiTypography-root MuiTypography-h4 emotion-9"
                    data-se="o-form-head"
                    id="identify_Title_Sign_In_aut1egri5t7iomJ3l1d7_1"
                  >
                    Sign In
                  </h2>
                </div>
              </div>
              <div
                class="MuiBox-root emotion-7"
              >
                <div
                  class="MuiBox-root emotion-11"
                >
                  <label
                    class="MuiInputLabel-root MuiFormLabel-root MuiFormLabel-colorPrimary emotion-12"
                    for="identifier"
                  >
                    Username
                  </label>
                  <div
                    class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth emotion-13"
                  >
                    <input
                      aria-describedby="identify_Title_Sign_In_aut1egri5t7iomJ3l1d7_1"
                      aria-invalid="false"
                      autocomplete="username"
                      class="MuiInputBase-input emotion-14"
                      data-se="identifier"
                      id="identifier"
                      name="identifier"
                      type="text"
                    />
                  </div>
                </div>
              </div>
              <div
                class="MuiBox-root emotion-7"
              >
                <div
                  class="MuiBox-root emotion-11"
                >
                  <label
                    class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-animated MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-animated emotion-17"
                    for="credentials.passcode"
                  >
                    Password
                  </label>
                  <div
                    class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-adornedEnd emotion-13"
                  >
                    <input
                      aria-describedby="identify_Title_Sign_In_aut1egri5t7iomJ3l1d7_1"
                      aria-invalid="false"
                      autocomplete="current-password"
                      class="MuiInputBase-input MuiInputBase-inputAdornedEnd emotion-14"
                      data-se="credentials.passcode"
                      id="credentials.passcode"
                      name="credentials.passcode"
                      type="password"
                    />
                    <div
                      class="MuiInputAdornment-root MuiInputAdornment-positionEnd emotion-20"
                    >
                      <button
                        aria-controls="credentials.passcode"
                        aria-label="Show password"
                        aria-pressed="false"
                        class="MuiButtonBase-root MuiIconButton-root MuiIconButton-edgeEnd MuiIconButton-sizeMedium emotion-21"
                        data-mui-internal-clone-element="true"
                        tabindex="0"
                        type="button"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-22"
                          fill="none"
                          focusable="false"
                          viewBox="0 0 16 16"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            clip-rule="evenodd"
                            d="M3.89765 11.5506C2.89626 10.6994 2.04176 9.50056 1.15617 8C2.04176 6.49944 2.89626 5.30062 3.89765 4.44944C4.96916 3.53865 6.24031 3 8 3C9.75969 3 11.0308 3.53865 12.1024 4.44944C13.1037 5.30062 13.9582 6.49944 14.8438 8C13.9582 9.50056 13.1037 10.6994 12.1024 11.5506C11.0308 12.4613 9.75969 13 8 13C6.24031 13 4.96916 12.4613 3.89765 11.5506ZM8 14C12 14 14 11.5 16 8C14 4.5 12 2 8 2C4 2 2 4.5 0 8C2 11.5 4 14 8 14ZM11 8C11 9.65685 9.65685 11 8 11C6.34315 11 5 9.65685 5 8C5 6.34315 6.34315 5 8 5C9.65685 5 11 6.34315 11 8ZM12 8C12 10.2091 10.2091 12 8 12C5.79086 12 4 10.2091 4 8C4 5.79086 5.79086 4 8 4C10.2091 4 12 5.79086 12 8Z"
                            fill="currentColor"
                            fill-rule="evenodd"
                          />
                        </svg>
                        <span
                          class="MuiTouchRipple-root emotion-23"
                        />
                      </button>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="MuiBox-root emotion-7"
              >
                <fieldset
                  aria-describedby="identify_Title_Sign_In_aut1egri5t7iomJ3l1d7_1"
                  class="MuiFormControl-root MuiFormControl-marginNormal emotion-25"
                >
                  <label
                    class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd emotion-26"
                  >
                    <span
                      class="MuiCheckbox-root MuiCheckbox-colorPrimary MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary PrivateSwitchBase-root emotion-27"
                    >
                      <input
                        class="PrivateSwitchBase-input emotion-28"
                        data-se="rememberMe"
                        data-se-for-name="rememberMe"
                        id="rememberMe"
                        name="rememberMe"
                        type="checkbox"
                      />
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-22"
                        data-testid="CheckBoxOutlineBlankIcon"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                        />
                      </svg>
                    </span>
                    <span
                      class="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label emotion-30"
                    >
                      Keep me signed in
                    </span>
                  </label>
                </fieldset>
              </div>
              <div
                class="MuiBox-root emotion-7"
              >
                <button
                  aria-describedby="identify_Title_Sign_In_aut1egri5t7iomJ3l1d7_1"
                  class="MuiButtonBase-root MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-fullWidth MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-fullWidth emotion-32"
                  data-type="save"
                  tabindex="0"
                  type="submit"
                >
                  Sign in
                </button>
              </div>
              <div
                class="MuiBox-root emotion-7"
              >
                <a
                  class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways emotion-34"
                  data-se="forgot-password"
                  href="javascript:void(0)"
                >
                  Forgot password?
                </a>
              </div>
              <div
                class="MuiBox-root emotion-7"
              >
                <hr
                  class="MuiDivider-root MuiDivider-fullWidth separation-line emotion-36"
                />
              </div>
              <div
                class="MuiBox-root emotion-37"
              >
                <div
                  class="MuiBox-root emotion-7"
                >
                  <div
                    class="MuiBox-root emotion-8"
                  >
                    <p
                      class="MuiTypography-root MuiTypography-body1 MuiTypography-paragraph emotion-40"
                      data-se="signup-info"
                      id="identify_Description_Dont_have_an_account_aut1egri5t7iomJ3l1d7_9"
                    >
                      Don't have an account?
                    </p>
                  </div>
                </div>
                <div
                  class="MuiBox-root emotion-7"
                >
                  <a
                    class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways emotion-34"
                    data-se="enroll"
                    href="javascript:void(0)"
                  >
                    Sign up
                  </a>
                </div>
              </div>
            </div>
          </form>
        </div>
      </div>
    </main>
  </div>
</div>
`;

exports[`identify-with-password renders the loading state first 1`] = `
<div>
  <div
    class="MuiScopedCssBaseline-root emotion-0"
  >
    <main
      class="auth-container main-container mainViewContainer MuiBox-root emotion-1"
      data-commit="b9bbc0140703c3fbf0e2e58920362e70"
      data-version="0.0.0"
      id="okta-sign-in"
      lang="en"
    >
      <div
        class="siwContainer MuiBox-root emotion-2"
      >
        <div
          class="okta-sign-in-header auth-header siwHeader MuiBox-root emotion-3"
        >
          <h1
            class="MuiTypography-root MuiTypography-h1 emotion-4"
          />
        </div>
        <div
          class="MuiBox-root emotion-5"
        >
          <div
            class="MuiBox-root emotion-6"
          >
            <span
              aria-label="Loading..."
              aria-valuetext="Loading..."
              class="MuiCircularProgress-root MuiCircularProgress-indeterminate MuiCircularProgress-colorPrimary emotion-7"
              role="progressbar"
              style="width: 1.14285714rem; height: 1.14285714rem;"
            >
              <svg
                class="MuiCircularProgress-svg emotion-8"
                viewBox="22 22 44 44"
              >
                <circle
                  class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate emotion-9"
                  cx="44"
                  cy="44"
                  fill="none"
                  r="18"
                  stroke-width="8"
                />
              </svg>
            </span>
          </div>
        </div>
      </div>
    </main>
  </div>
</div>
`;
